C2: assert(n->outcnt() != 0 || C->top() == n || n->is_Proj()) failed: No dead instructions after post-alloc

XMLWordPrintable

    • b11
    • 11
    • b16

        Run attached example with:
        ~/ws/jdk-12/fastdebug/bin/java -Xcomp Test

        fails with :
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/chaitin.cpp:1661
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S72/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3e8f11e1-a6d3-472f-9301-2c71c1d9e6b4/runs/25f26cb8-1ed1-4dce-8b18-41fa9ae0169e/workspace/open/src/hotspot/share/opto/chaitin.cpp:1661), pid=11585, tid=11596
        # assert(n->outcnt() != 0 || C->top() == n || n->is_Proj()) failed: No dead instructions after post-alloc
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0+9) (fastdebug build 12-ea+9)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+9, compiled mode, tiered, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /scratch/lmesnik/ws/JavaFuzzer/results/12_05/crashes/r2-2126/core.11585)
        #

          1. Test.java
            6 kB
          2. hs_err_pid27132.log
            62 kB
          3. replay_pid27132.log
            98 kB
          4. FuzzerUtils.java
            13 kB
          5. 0009.jdk11u.tar.gz
            9 kB

              Assignee:
              Roland Westrelin
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: